--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1174,7 +1174,9 @@
     "\n",
     "References:\n",
     "\n",
-    "Geron, A. (2017) Hands‑On Machine Learning with Scikit‑Learn and TensorFlow. USA: O'Reilly Media.\n",
+    "Geron, A. (2017) Hands‑On Machine Learning with Scikit‑Learn and TensorFlow. USA: O'Reilly Media.<br>\n",
+    "(https://machinelearningmastery.com/gentle-introduction-gradient-boosting-algorithm-machine-learning/)<br>\n",
+    "(https://www.analyticsvidhya.com/blog/2015/11/quick-introduction-boosting-algorithms-machine-learning/)\n",
     "\n",
     "**Gradient Boosting Classifier**\n",
     "\n",
@@ -1182,8 +1184,11 @@
     "\n",
     "Training a Decision Tree classifier works by recursively splitting the test data into subsets using one of the features. Those subsets are again split into further subsets and so on until all the subsets contain either only one label that you are trying to classify or there are no more features to split on. There are various algorithms to decide what is the 'best' feature the split on. Predictions work by feeding new data into the structure created above and following the splits until the classified is determined.\n",
     "\n",
-    "Gradient Boosting then works by taking the predictions of one classifier (in this case a decision trees )and then sequentially adding new classifiers that then fit the estimates that were classified incorrectly.\n",
+    "Gradient Boosting then works by taking the predictions of one classifier (in this case a decision trees )and then sequentially adding new classifiers that then fit the estimates that were classified incorrectly. The idea is that by concentrating on the errors and adding more classifier, this gradually improves the overall accuracy of the model.\n",
     "\n",
+    "Visually you can see how combining combining models allows us to capture more complicated relationships than a single model is capable of by itself.\n",
+    "\n",
+    "<img src=\"https://www.analyticsvidhya.com/wp-content/uploads/2015/11/bigd.png\">\n",
     "\n"
    ]
   },
